修改说明: 优化了cicd相关配置